--- a/testejs2.html
+++ b/testejs2.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Teste em JS</title>
+    <title>Teste em JS funcionando!</title>
     <script>
         var quebrou = false;
 
