--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             </p>
         </aside>
         <footer id="rodape">
-            <h3>Copyright 2013 - by Gustavo Guanabara <br> <a href="http://facebook.com/cursoemvideo" target="_blank"> Facebook</a> | <a href="http://twitter.com/cursoemvideo" target="_blank"> Twitter</a></h3>
+            <h3>Copyright 2013 - by Gustavo Guanabara <br> <a href="http://facebook.com/cursosemvideo" target="_blank"> Facebook</a> | <a href="http://twitter.com/cursoemvideo" target="_blank"> Twitter</a></h3>
         </footer>
     </div>
 </body>
