--- a/multimidia.html
+++ b/multimidia.html
@@ -16,23 +16,23 @@
                 <h1>Google Glass</h1>
                 <h3>A revolução do Google está chegando</h3>
             </hgroup>
-            <img id="icone" src="_imagens/glass-oculos-preto-peq.png">
+            <img id="icone" src="_imagens/multimidia.png">
             <nav id="menu">
                 <h1>Menu Principal</h1>
                 <ul type="disc">
-                    <li onmouseover="mudaFoto('_imagens/home.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')">
+                    <li onmouseover="mudaFoto('_imagens/home.png')" onmouseout="mudaFoto('_imagens/multimidia.png')">
                         <a href="index.html">Home</a>
                     </li>
-                    <li onmouseover="mudaFoto('_imagens/especificacoes.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')">
+                    <li onmouseover="mudaFoto('_imagens/especificacoes.png')" onmouseout="mudaFoto('_imagens/multimidia.png')">
                         <a href="specs.html">Especificações</a>
                     </li>
-                    <li onmouseover="mudaFoto('_imagens/fotos.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')">
+                    <li onmouseover="mudaFoto('_imagens/fotos.png')" onmouseout="mudaFoto('_imagens/multimidia.png')">
                         <a href="fotos.html">Fotos</a>
                     </li>
-                    <li onmouseover="mudaFoto('_imagens/multimidia.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')">
+                    <li onmouseover="mudaFoto('_imagens/multimidia.png')" onmouseout="mudaFoto('_imagens/multimidia.png')">
                         <a href="multimidia.html">Multimídia</a>
                     </li>
-                    <li onmouseover="mudaFoto('_imagens/contato.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')">
+                    <li onmouseover="mudaFoto('_imagens/contato.png')" onmouseout="mudaFoto('_imagens/multimidia.png')">
                         <a href="fale-conosco.html">Fale conosco</a>
                     </li>
                 </ul>
@@ -52,7 +52,7 @@
         [AQUI ENTRA UM VÍDEO] [AQUI ENTRA UM ÁUDIO]
 
         <footer id="rodape">
-            <h3>Copyright 2013 - by Gustavo Guanabara <br> <a href="http://facebook.com/cursoemvideo" target="_blank"> Facebook</a> | <a href="http://twitter.com/cursoemvideo" target="_blank"> Twitter</a></h3>
+            <h3>Copyright 2013 - by Gustavo Guanabara <br> <a href="http://facebook.com/cursosemvideo" target="_blank"> Facebook</a> | <a href="http://twitter.com/cursoemvideo" target="_blank"> Twitter</a></h3>
         </footer>
     </div>
 </body>
