--- a/specs.html
+++ b/specs.html
@@ -5,7 +5,8 @@
     <title>Tudo sobre Google Glass</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="_css/estilo.css" type="text/css" rel="stylesheet">
+    <link href="_css/estilo.css" type="text/css" rel="stylesheet" />
+    <link rel="stylesheet" href="_css/specs.css" type="text/css" />
 </head>
 <script language="javascript" src="_javascript/funcoes.js"></script>
 
@@ -16,7 +17,7 @@
                 <h1>Google Glass</h1>
                 <h3>A revolução do Google está chegando</h3>
             </hgroup>
-            <img id="icone" src="_imagens/glass-oculos-preto-peq.jpg">
+            <img id="icone" src="_imagens/especificacoes.png">
             <nav id="menu">
                 <h1>Menu Principal</h1>
                 <ul type="disc">
@@ -38,19 +39,34 @@
                 </ul>
             </nav>
         </header>
-        <hgroup>
-            <h3>Glass > Especificações</h3>
-            <h1>Raio-X no Google Glass</h1>
-            <h2>por Gustavo Guanabara</h2>
-            <h3 class="direita">Atualizado em 01/Maio/2013</h3>
-        </hgroup>
+        <section id="corpo-full">
+            <article id="noticia-principal">
+                <header id="cabecalho-artigo">
+                    <hgroup>
+                        <h3>Glass > Especificações</h3>
+                        <h1>Raio-X no Google Glass</h1>
+                        <h2>por Gustavo Guanabara</h2>
+                        <h3 class="direita">Atualizado em 01/Maio/2013</h3>
+                    </hgroup>
+                </header>
 
-
-        <p>Clique em qualquer área destacada da imagem para ter mais informações sobre os recursos do Google Glass. Qualquer ponto vermelho vai te levar a um lugar cheio de novas informações.</p>
+                <p>Clique em qualquer área destacada da imagem para ter mais informações sobre os recursos do Google Glass. Qualquer ponto vermelho vai te levar a um lugar cheio de novas informações.</p>
+                <section id="conteudo">
+                    <img src="_imagens/glass-esquema-marcado.jpg" usemap="#meumapa">
+                    <map name="meumapa">
+                      <area shape="poly" coords="184, 219,265, 208, 265, 242, 186, 255" href="google-glass.html#tela" target="janela"/>
+                      <area shape="circle" coords="158, 243, 12" href="google-glass.html#camera" target="janela" alt="">
+                      <area shape="circle" coords="73, 52, 11" href="google-glass.html#gadgets" target="janela" alt=""/>
+                      <area shape="poly" coords="24, 144, 83, 216, 84, 252, 27, 168" href="google-glass.html#sensores" target="janela" alt="">
+                    </map>
+                    <iframe src="google-glass.html" name="janela" id="frame-spec"></iframe>
+                </section>
+            </article>
+        </section>
 
 
         <footer id="rodape">
-            <h3>Copyright 2013 - by Gustavo Guanabara <br> <a href="http://facebook.com/cursoemvideo" target="_blank"> Facebook</a> | <a href="http://twitter.com/cursoemvideo" target="_blank"> Twitter</a></h3>
+            <h3>Copyright 2013 - by Gustavo Guanabara <br> <a href="http://facebook.com/cursosemvideo" target="_blank"> Facebook</a> | <a href="http://twitter.com/cursoemvideo" target="_blank"> Twitter</a></h3>
         </footer>
     </div>
 </body>
