--- a/specs.html
+++ b/specs.html
@@ -59,7 +59,7 @@
                       <area shape="circle" coords="73, 52, 11" href="google-glass.html#gadgets" target="janela" alt=""/>
                       <area shape="poly" coords="24, 144, 83, 216, 84, 252, 27, 168" href="google-glass.html#sensores" target="janela" alt="">
                     </map>
-                    <iframe src="google-glass.html" name="janela" id="frame-spec"></iframe>
+                    <iframe src="google-glass.html" name="janela" id="frame-spec" scrolling="no"></iframe>
                 </section>
             </article>
         </section>
