--- a/fale-conosco.html
+++ b/fale-conosco.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="_css/estilo.css" type="text/css" rel="stylesheet">
+    <link href="_css/form.css" type="text/css" rel="stylesheet">
 </head>
 <script language="javascript" src="_javascript/funcoes.js"></script>
 
@@ -38,18 +39,79 @@
                 </ul>
             </nav>
         </header>
-        <hgroup>
-            <h3>Fale Conosco > Contato</h3>
-            <h1>Formulário de Contato</h1>
-            <h2>por Gustavo Guanabara</h2>
-            <h3 class="direita">Atualizado em 01/Maio/2013</h3>
-        </hgroup>
+        <section id="corpo-full">
+            <article id="noticia-principal">
+                <header id="cabecalho-artigo">
+                    <hgroup>
+                        <h3>Fale Conosco > Contato</h3>
+                        <h1>Formulário de Contato</h1>
+                        <h2>por Gustavo Guanabara</h2>
+                        <h3 class="direita">Atualizado em 01/Maio/2013</h3>
+                    </hgroup>
+                </header>
+
+                <form method="POST" id="fcontato">
+
+                    <fieldset id="usuario">
+                        <legend>Identificação do Usuário</legend>
+                        <p><label for="cnome">Nome: </label> <input type="text" name="tnome" id="cnome" size="20" maxlength="30" placeholder="Nome Completo"> </p>
+                        <p><label for="csenha">Senha: </label><input type="password" name="tsenha" id="csenha" size="8" maxlength="8" placeholder="Digite uma senha"> </p>
+                        <p><label for="cemail">Email: </label><input type="email" name="temail" id="cemail" size="20" maxlength="40" placeholder="Digite seu email"></p>
+                        <fieldset id="sexo">
+                            <legend>Sexo:</legend>
+                            <input type="radio" name="tsexo" id="cmasc"> <label for="cmasc">Masculino</label><br>
+                            <input type="radio" name="tsexo" id="cfem"> <label for="cfem">Feminino</label>
+                        </fieldset>
+                        <p><label for="cnasc"> Data de Nascimento: </label><input type="date" name="tnasc" id="cnasc"> </p>
+
+                    </fieldset>
 
 
-        <p>
-            Identificação do Usuário Nome: Senha: E-mail: Sexo: - Masculino - Feminino Data de Nascimento: Endereço do Usuário Logradouro: Número: Estado: Cidade: Mensagem do Usuário Grau de Urgência: Mensagem: Quero um Google Glass Gostaria de adquirir um Google
-            Glass quando disponível Cor: Quantidade: Preço Total: R$ [BOTÃO ENVIAR]
-        </p>
+                    <fieldset id="endereco">
+                        <legend>Endereço do Usuário </legend>
+                        <p><label for="crua">Logradouro: </label><input type="text" name="trua" id="crua" size="25" maxlength="80" placeholder="Rua, Av, Trav, etc..."></p>
+                        <p><label for="cnumero">Número: </label> <input type="number" name="tnumero" id="cnumero" min="1" max="99999" placeholder="0000"> </p>
+                        <p><label for="cuf"> Estado: </label><select name="test" id="cest">
+                          <optgroup label="Região Sudeste">  
+                          <option value="">Rio de Janeiro</option>
+                            <option value="">São Paulo</option>
+                            <option value="">Minas Gerais</option>
+                          </optgroup>
+                          <optgroup label="Região Sul">
+                            <option value="">Santa Catarina</option>
+                            <option value="">Rio Grande do Sul</option>
+                            <option value="">Paraná</option>
+                          </optgroup>
+                            
+                            
+                        </select> </p>
+                        <p><label for="ccidade"> Cidade: </label><input type="text" name="tcidade" id="ccidade" size="20" maxlength="60" placeholder="Digite a cidade"> </p>
+                    </fieldset>
+
+
+                    <fieldset id="mensagem">
+                        <legend>Mensagem do Usuário </legend>
+                        <p><label for="curg">Grau de Urgência: </label>Min<input type="range" name="turg" id="curg" min="0" max="10" step="2">Máx </p>
+                        <p><label for="cmsg"> Mensagem: </label><textarea name="tmsg" id="cmsg" rows="5" cols="45" placeholder="Deixe aqui sua mensagem"></textarea></p>
+                    </fieldset>
+
+                    <fieldset id="pedido">
+                        <legend>Quero um Google Glass</legend>
+                        <p><label for=""></label>ostaria de adquirir um Google Glass quando disponível <input type=""> </p>
+                        <p><label for=""> Cor: </label></p>
+                        <p><label for=""> Quantidade: </label></p>
+                        <p><label for=""> Preço Total:  R$ </label></p>
+                    </fieldset>
+
+
+
+                    [BOTÃO ENVIAR]
+                </form>
+
+
+
+            </article>
+        </section>
 
         <footer id="rodape">
             <h3>Copyright 2013 - by Gustavo Guanabara <br> <a href="http://facebook.com/cursosemvideo" target="_blank"> Facebook</a> | <a href="http://twitter.com/cursoemvideo" target="_blank"> Twitter</a></h3>
