--- a/multimidia.html
+++ b/multimidia.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="_css/estilo.css" type="text/css" rel="stylesheet">
+    <link href="_css/media.css" type="text/css" rel="stylesheet">
 </head>
 <script language="javascript" src="_javascript/funcoes.js"></script>
 
@@ -38,18 +39,26 @@
                 </ul>
             </nav>
         </header>
-        <hgroup>
-            <h3>Glass > Multimídia</h3>
-            <h1>Sons e Vídeos</h1>
-            <h2>por Gustavo Guanabara</h2>
-            <h3 class="direita">Atualizado em 01/Maio/2013</h3>
-        </hgroup>
+        <section id="corpo-full">
+            <article id="noticia-principal">
+                <header id="cabecalho-artigo">
 
+                    <hgroup>
+                        <h3>Glass > Multimídia</h3>
+                        <h1>Sons e Vídeos</h1>
+                        <h2>por Gustavo Guanabara</h2>
+                        <h3 class="direita">Atualizado em 01/Maio/2013</h3>
+                    </hgroup>
+                </header>
+                <div id="tv-radio">
+                    <iframe id="youtube" width="455" height="315" src="https://www.youtube.com/embed/4EvNxWhskf8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <audio id="musica" controls>
+                       <source src="_media/Eduardo Agni_Inner Space.mp3" type="audio/mpeg"/>
+                    </audio>
 
-
-        <h2>Áudio e Vídeo</h2>
-
-        [AQUI ENTRA UM VÍDEO] [AQUI ENTRA UM ÁUDIO]
+                </div>
+            </article>
+        </section>
 
         <footer id="rodape">
             <h3>Copyright 2013 - by Gustavo Guanabara <br> <a href="http://facebook.com/cursosemvideo" target="_blank"> Facebook</a> | <a href="http://twitter.com/cursoemvideo" target="_blank"> Twitter</a></h3>
