--- a/fale-conosco.html
+++ b/fale-conosco.html
@@ -9,6 +9,13 @@
     <link href="_css/form.css" type="text/css" rel="stylesheet">
 </head>
 <script language="javascript" src="_javascript/funcoes.js"></script>
+<script>
+    function calc_total() {
+        var qtd = parseInt(document.getElementById('cquant').value);
+        tot = qtd * 1500;
+        document.getElementById('ctot').value = tot;
+    }
+</script>
 
 <body>
     <div id="interface">
@@ -50,12 +57,12 @@
                     </hgroup>
                 </header>
 
-                <form method="POST" id="fcontato">
+                <form method="POST" id="fcontato" action="mailto:giovanimguichard@gmail.com" oninput="calc_total();">
 
                     <fieldset id="usuario">
                         <legend>Identificação do Usuário</legend>
                         <p><label for="cnome">Nome: </label> <input type="text" name="tnome" id="cnome" size="20" maxlength="30" placeholder="Nome Completo"> </p>
-                        <p><label for="csenha">Senha: </label><input type="password" name="tsenha" id="csenha" size="8" maxlength="8" placeholder="Digite uma senha"> </p>
+                        <p><label for="csenha">Senha: </label><input type="password" name="tsenha" id="csenha" size="15" maxlength="15" placeholder="Digite uma senha"> </p>
                         <p><label for="cemail">Email: </label><input type="email" name="temail" id="cemail" size="20" maxlength="40" placeholder="Digite seu email"></p>
                         <fieldset id="sexo">
                             <legend>Sexo:</legend>
@@ -97,15 +104,16 @@
 
                     <fieldset id="pedido">
                         <legend>Quero um Google Glass</legend>
-                        <p><label for=""></label>ostaria de adquirir um Google Glass quando disponível <input type=""> </p>
-                        <p><label for=""> Cor: </label></p>
-                        <p><label for=""> Quantidade: </label></p>
-                        <p><label for=""> Preço Total:  R$ </label></p>
+                        <p><input type="checkbox" name="tped" id="cped"><label for="cped"> Gostaria de adquirir um Google Glass quando disponível</label></p>
+                        <p><label for="ccor"> Cor: </label><input type="color" name="tcor" id="ccor"> </p>
+                        <p><label for="cquant"> Quantidade: </label><input type="number" name="tquant" id="cquant" min="0" max="5" value="0"></p>
+                        <p><label for="ctot"> Preço Total:  R$ </label><input type="text" name="ttot" id="ctot" placeholder="Total a pagar" readonly></p>
                     </fieldset>
 
 
 
-                    [BOTÃO ENVIAR]
+                    <input type="submit" value="ENVIAR">
+                    <input type="image" src="_imagens/botao-enviar.png">
                 </form>
 
 
