--- a/google-glass.html
+++ b/google-glass.html
@@ -36,6 +36,8 @@
             margin-bottom: 800px;
         }
         
+        img {}
+        
         img.img-dir {
             display: block;
             float: right;
