Unspecify css selectors

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <h1>Google Glass</h1>
           <h3>A revolução do Google está chegando</h3>
         </hgroup>
-        <img id="icone" src="_imagens/glass-oculos-preto-peq.png" />
+        <img class="icone" src="_imagens/glass-oculos-preto-peq.png" />
         <nav id="menu">
           <h1>Menu Principal</h1>
           <ul type="disc">
