--- a/specs.html
+++ b/specs.html
@@ -50,18 +50,68 @@
                     </hgroup>
                 </header>
 
-                <p>Clique em qualquer área destacada da imagem para ter mais informações sobre os recursos do Google Glass. Qualquer ponto vermelho vai te levar a um lugar cheio de novas informações.</p>
+
                 <section id="conteudo">
-                    <img src="_imagens/glass-esquema-marcado.jpg" usemap="#meumapa">
-                    <map name="meumapa">
-                      <area shape="poly" coords="184, 219,265, 208, 265, 242, 186, 255" href="google-glass.html#tela" target="janela"/>
-                      <area shape="circle" coords="158, 243, 12" href="google-glass.html#camera" target="janela" alt="">
-                      <area shape="circle" coords="73, 52, 11" href="google-glass.html#gadgets" target="janela" alt=""/>
-                      <area shape="poly" coords="24, 144, 83, 216, 84, 252, 27, 168" href="google-glass.html#sensores" target="janela" alt="">
-                    </map>
-                    <iframe src="google-glass.html" name="janela" id="frame-spec" scrolling="no"></iframe>
+                    <div>
+                        <p>Clique em qualquer área destacada da imagem para ter mais informações sobre os recursos do Google Glass. Qualquer ponto vermelho vai te levar a um lugar cheio de novas informações.</p>
+                        <img src="_imagens/glass-esquema-marcado.jpg" usemap="#meumapa">
+                        <map name="meumapa">
+                <area href="#" shape="poly" coords="184, 219,265, 208, 265, 242, 186,
+                  255"
+                  target="tela" />
+                <area href="#" shape="circle" coords="158, 243, 12"
+                  target="camera" alt="">
+                <area href="#" shape="circle" coords="73, 52, 11"
+                  target="sensores" alt="" />
+                <area href="#" shape="poly" coords="24, 144, 83, 216, 84, 252, 27, 168"
+                  target="gadgets" alt="">
+              </map>
+                    </div>
+
+                    <article class="janela show" id="tela">
+                        <header>
+                            <h1> Tela </h1>
+                            <h2>Como o mundo vai aparecer</h2>
+                        </header>
+
+                        <p>De acordo com fontes próximas do Google, os óculos vão contar com uma pequena tela de LCD ou AMOLED na parte superior e em frente aos olhos do usuário. Com o uso de uma câmera e GPS, você pode se situar, assim como selecionar opções
+                            com o movimento da cabeça.</p>
+                        <img src="_imagens/det-tela.jpg" alt="Tela do Google Glass">
+                    </article>
+                    <article class="janela" id="camera">
+                        <header>
+                            <h1>Câmera</h1>
+                            <h2>Filme e fotografe a qualquer momento</h2>
+                        </header>
+                        <img src="_imagens/det-camera.jpg" class="img-dir" calt="Câmera do
+                Google Glass">
+                        <p>Com o Google Glass será possível tirar fotos com até 5 megapixels e gravar vídeos com 720 linhas de resolução. Os primeiros vídeos e fotos capturados com o aparelho já começaram a circular pela rede, mas até agora ninguém tem muitas
+                            informações técnicas.
+                        </p>
+                    </article>
+                    <article class="janela" id="sensores">
+                        <header>
+                            <h1>Sensores</h1>
+                            <h2>A sensibilidade de um simples óculos</h2>
+                        </header>
+                        <p>Quem pensa que para comandar o Google Glass vai precisar de teclado e mouse, se engana redondamente. O dispositivo vem com vários tipos de sensores e microfones embutidos. Assim, para dar um comando, basta falar ou passar o dedo
+                            na lateral do óculos.
+                        </p>
+                        <img src="_imagens/det-touch.jpg" alt="Sensores do Google Glass">
+                    </article>
+                    <article class="janela" id="gadgets">
+                        <header>
+                            <h1>Bateria e Gadgets</h1>
+                            <h2>Quais são os dispositivos que complementam o Glass</h2>
+                        </header>
+                        <img src="_imagens/det-bateria.jpg" class="img-dir" alt="Bateria e
+                gadgets do Google Glass">
+                        <p>Segundo a própria Google, o Glass virá com uma bateria que tem autonomia suficiente para durar um dia inteiro. Apenas algumas atividades como videoconferências e longas filmagens vão exigir um pouco mais. Além disso ele vem com
+                            WiFi, Bluetooth, 3G/4G e muito mais.</p>
+                    </article>
                 </section>
-            </article>
+
+
         </section>
 
 
