--- a/index.html
+++ b/index.html
@@ -1,76 +1,58 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
+
+<head>
     <title>Tudo sobre Google Glass</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="_css/estilo.css" type="text/css" rel="stylesheet" />
-  </head>
-  <script language="javascript" src="_javascript/funcoes.js"></script>
+</head>
+<script language="javascript" src="_javascript/funcoes.js"></script>
 
-  <body>
+<body>
     <div id="interface">
-      <header id="cabecalho">
-        <hgroup>
-          <h1>Google Glass</h1>
-          <h3>A revolução do Google está chegando</h3>
-        </hgroup>
-        <img class="icone" src="_imagens/glass-oculos-preto-peq.png" />
-        <nav id="menu">
-          <h1>Menu Principal</h1>
-          <ul type="disc">
-            <li
-              onmouseover="mudaFoto('_imagens/home.png')"
-              onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"
-            >
-              <a href="index.html">Home</a>
-            </li>
-            <li
-              onmouseover="mudaFoto('_imagens/especificacoes.png')"
-              onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"
-            >
-              <a href="specs.html">Especificações</a>
-            </li>
-            <li
-              onmouseover="mudaFoto('_imagens/fotos.png')"
-              onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"
-            >
-              <a href="fotos.html">Fotos</a>
-            </li>
-            <li
-              onmouseover="mudaFoto('_imagens/multimidia.png')"
-              onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"
-            >
-              <a href="multimidia.html">Multimídia</a>
-            </li>
-            <li
-              onmouseover="mudaFoto('_imagens/contato.png')"
-              onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"
-            >
-              <a href="fale-conosco.html">Fale conosco</a>
-            </li>
-          </ul>
-        </nav>
-      </header>
-      <main id="main">
-        <section id="corpo">
-          <article id="noticia-principal">
-            <header id="cabecalho-artigo">
-              <hgroup>
-                <h3>Tecnologia > Inovações</h3>
-                <h1>Saiba tudo sobre o Google Glass</h1>
-                <h2>por Gustavo Guanabara</h2>
-                <h3 class="direita">Atualizado em 23/Abril/2013</h3>
-              </hgroup>
-            </header>
+        <header id="cabecalho">
+            <hgroup>
+                <h1>Google Glass</h1>
+                <h3>A revolução do Google está chegando</h3>
+            </hgroup>
+            <img class="icone" src="_imagens/glass-oculos-preto-peq.png" />
+            <nav id="menu">
+                <h1>Menu Principal</h1>
+                <ul type="disc">
+                    <li onmouseover="mudaFoto('_imagens/home.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')">
+                        <a href="index.html">Home</a>
+                    </li>
+                    <li onmouseover="mudaFoto('_imagens/especificacoes.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')">
+                        <a href="specs.html">Especificações</a>
+                    </li>
+                    <li onmouseover="mudaFoto('_imagens/fotos.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')">
+                        <a href="fotos.html">Fotos</a>
+                    </li>
+                    <li onmouseover="mudaFoto('_imagens/multimidia.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')">
+                        <a href="multimidia.html">Multimídia</a>
+                    </li>
+                    <li onmouseover="mudaFoto('_imagens/contato.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')">
+                        <a href="fale-conosco.html">Fale conosco</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+        <main id="main">
+            <section id="corpo">
+                <article id="noticia-principal">
+                    <header id="cabecalho-artigo">
+                        <hgroup>
+                            <h3>Tecnologia > Inovações</h3>
+                            <h1>Saiba tudo sobre o Google Glass</h1>
+                            <h3 class="direita">Atualizado em 23/Abril/2013</h3>
+                        </hgroup>
+                    </header>
 
-            <h2>O que é</h2>
-            <p>
-              O Google Glass é um acessório em forma de óculos que possibilita a
-              interação dos usuários com diversos conteúdos em realidade
-              aumentada. Também chamado de
-              <a href="http://glass.google.com" target="_blank"
-                >Project Glass</a
+                    <h2>O que é</h2>
+                    <p>
+                        O Google Glass é um acessório em forma de óculos que possibilita a interação dos usuários com diversos conteúdos em realidade aumentada. Também chamado de
+                        <a href="http://glass.google.com" target="_blank">Project Glass</a
               >
               , o eletrônico é capaz de tirar fotos a partir de comandos de voz,
               enviar mensagens instantâneas e realizar vídeoconferências. Seu
@@ -171,8 +153,9 @@
           >
           |
           <a href="http://twitter.com/cursoemvideo" target="_blank"> Twitter</a>
-        </h3>
-      </footer>
+                        </h3>
+                        </footer>
     </div>
-  </body>
+</body>
+
 </html>
