--- a/specs.html
+++ b/specs.html
@@ -58,13 +58,13 @@
                         <map name="meumapa">
                 <area href="#" shape="poly" coords="184, 219,265, 208, 265, 242, 186,
                   255"
-                  target="tela" />
+                  target="#tela" />
                 <area href="#" shape="circle" coords="158, 243, 12"
-                  target="camera" alt="">
+                  target="#camera" alt="">
                 <area href="#" shape="circle" coords="73, 52, 11"
-                  target="sensores" alt="" />
+                  target="#sensores" alt="" />
                 <area href="#" shape="poly" coords="24, 144, 83, 216, 84, 252, 27, 168"
-                  target="gadgets" alt="">
+                  target="#gadgets" alt="">
               </map>
                     </div>
 
@@ -110,7 +110,7 @@
                             WiFi, Bluetooth, 3G/4G e muito mais.</p>
                     </article>
                 </section>
-
+            </article>
 
         </section>
 
